--- a/Main_XPINNS.ipynb
+++ b/Main_XPINNS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,13 +62,12 @@
     "        return tf.ones((n,1), dtype=self.DTYPE)*value\n",
     "\n",
     "    def rhs(self,r,o):\n",
-    "        #res = (1/(0.04*(2*self.pi)**0.5))*tf.exp((-1/(2*0.04**2))*((r*tf.cos(o))**2+(r*tf.sin(o))**2))\n",
-    "        res = -1\n",
+    "        res = (1/(0.04*(2*self.pi)**0.5))*tf.exp((-1/(2*0.04**2))*((r*tf.cos(o))**2+(r*tf.sin(o))**2))\n",
     "        return res\n",
     "\n",
     "    # Define residual of the PDE\n",
     "    def fun_r(self,r,o,u_r,u_rr,u_o):\n",
-    "        return u_rr*r*r + u_r*r + u_o + 1 #self.rhs(r,o)\n",
+    "        return u_rr*r*r + u_r*r + u_o - self.rhs(r,o)\n",
     "        "
    ]
   },
