--- a/Main_XPINNS.ipynb
+++ b/Main_XPINNS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,11 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from classes.mesh import Mesh\n",
+    "from classes.Mesh import Mesh\n",
     "from classes.NeuralNet import PINN_NeuralNet\n",
     "from classes.PINN import PINN"
    ]
