--- a/Test_Precond_2D.ipynb
+++ b/Test_Precond_2D.ipynb
@@ -26,7 +26,7 @@
     "from classes.NeuralNet import PINN_NeuralNet\n",
     "from classes.cartesian.PINN import PINN\n",
     "from classes.cartesian.PDE_Model import PDE_Model\n",
-    "from classes.cartesian.preconditioner import preconditioner"
+    "from classes.cartesian.Preconditioner import preconditioner"
    ]
   },
   {
