--- a/Main.ipynb
+++ b/Main.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://nbviewer.org/github/bem4solvation/XPINNS/blob/xpinns/Main.ipynb"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
