--- a/Main.ipynb
+++ b/Main.ipynb
@@ -285,7 +285,10 @@
     "En la interfaz:\n",
     "$$ u_1(r) = u_2(r) \\: \\: \\: \\: r=1$$\n",
     "$$  \\epsilon_1\\frac{\\partial u_1}{\\partial r} = \\epsilon_2\\frac{\\partial u_2}{\\partial r} \\: \\: \\: \\: r=1$$\n",
-    "Con $\\epsilon_1=1$, $\\epsilon_2=10$"
+    "Con $\\epsilon_1=1$, $\\epsilon_2=10$\n",
+    "Solución analítica:\n",
+    "$$ u_1(r) = \\frac{1}{2\\pi\\epsilon_1}\\ln(r) \\: \\: \\: \\: 0r<1 $$\n",
+    "$$ u_2(r) = \\frac{1}{2\\pi\\epsilon_2}\\ln(r) \\: \\: \\: \\: 1<r<10 $$"
    ]
   },
   {
