--- a/Main.ipynb
+++ b/Main.ipynb
@@ -23,20 +23,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils.PDE_Model import PDE_Model\n",
-    "from utils.PDE_Model import PDE_Model_2\n",
-    "from utils.Preconditioner import Preconditioner\n",
-    "from utils.Preconditioner import change_fun\n",
+    "from utils2d.PDE_Model import PDE_Model\n",
+    "from utils2d.PDE_Model import PDE_Model_2\n",
+    "from utils2d.Preconditioner import Preconditioner\n",
+    "from utils2d.Preconditioner import change_fun\n",
     "\n",
-    "from utils.Mesh import Mesh\n",
-    "from utils.NeuralNet import PINN_NeuralNet\n",
+    "from utils2d.Mesh import Mesh\n",
+    "from utils2d.NeuralNet import PINN_NeuralNet\n",
     "\n",
-    "from utils.PINN import PINN\n",
-    "from utils.Postprocessing import View_results\n",
-    "from utils.PINN import PINN_Precond\n",
+    "from utils2d.PINN import PINN\n",
+    "from utils2d.Postprocessing import View_results\n",
+    "from utils2d.PINN import PINN_Precond\n",
     "\n",
-    "from utils.XPINN import XPINN\n",
-    "from utils.Postprocessing import View_results_X\n"
+    "from utils2d.XPINN import XPINN\n",
+    "from utils2d.Postprocessing import View_results_X\n"
    ]
   },
   {
