--- a/Main2d.ipynb
+++ b/Main2d.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -110,6 +110,51 @@
     "}\n",
     "\n",
     "PINN_solver.create_NeuralNet(PINN_NeuralNet,lr,**hyperparameters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"pinn__neural_net\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " lambda (Lambda)             multiple                  0         \n",
+      "                                                                 \n",
+      " dense (Dense)               multiple                  60        \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             multiple                  420       \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             multiple                  420       \n",
+      "                                                                 \n",
+      " dense_3 (Dense)             multiple                  420       \n",
+      "                                                                 \n",
+      " dense_4 (Dense)             multiple                  420       \n",
+      "                                                                 \n",
+      " dense_5 (Dense)             multiple                  420       \n",
+      "                                                                 \n",
+      " dense_6 (Dense)             multiple                  420       \n",
+      "                                                                 \n",
+      " dense_7 (Dense)             multiple                  420       \n",
+      "                                                                 \n",
+      " dense_8 (Dense)             multiple                  21        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 3,021\n",
+      "Trainable params: 3,021\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "PINN_solver.model.summary()"
    ]
   },
   {
