--- a/Main3d.ipynb
+++ b/Main3d.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -110,6 +110,51 @@
     "}\n",
     "\n",
     "PINN_solver.create_NeuralNet(PINN_NeuralNet,lr,**hyperparameters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"pinn__neural_net_6\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " lambda_6 (Lambda)           multiple                  0         \n",
+      "                                                                 \n",
+      " dense_54 (Dense)            multiple                  80        \n",
+      "                                                                 \n",
+      " dense_55 (Dense)            multiple                  420       \n",
+      "                                                                 \n",
+      " dense_56 (Dense)            multiple                  420       \n",
+      "                                                                 \n",
+      " dense_57 (Dense)            multiple                  420       \n",
+      "                                                                 \n",
+      " dense_58 (Dense)            multiple                  420       \n",
+      "                                                                 \n",
+      " dense_59 (Dense)            multiple                  420       \n",
+      "                                                                 \n",
+      " dense_60 (Dense)            multiple                  420       \n",
+      "                                                                 \n",
+      " dense_61 (Dense)            multiple                  420       \n",
+      "                                                                 \n",
+      " dense_62 (Dense)            multiple                  21        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 3,041\n",
+      "Trainable params: 3,041\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "PINN_solver.model.summary()"
    ]
   },
   {
@@ -290,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -369,14 +414,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loss: 15.799788:   1%|          | 32/3000 [01:09<1:47:59,  2.18s/it]\n"
+      "Loss: 49.06495:   1%|          | 23/3000 [02:00<4:18:56,  5.22s/it] \n"
      ]
     },
     {
@@ -386,7 +431,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m XPINN_solver\u001b[39m.\u001b[39;49msolve(N\u001b[39m=\u001b[39;49m\u001b[39m3000\u001b[39;49m)\n",
+      "Cell \u001b[1;32mIn [8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m XPINN_solver\u001b[39m.\u001b[39;49msolve(N\u001b[39m=\u001b[39;49m\u001b[39m3000\u001b[39;49m)\n",
       "File \u001b[1;32mc:\\Users\\achom\\Desktop\\Main\\Code\\Scientific Computing\\PINNS\\Code\\utils3d\\XPINN.py:165\u001b[0m, in \u001b[0;36mXPINN.solve\u001b[1;34m(self, N)\u001b[0m\n\u001b[0;32m    162\u001b[0m optim \u001b[39m=\u001b[39m [optim1,optim2]\n\u001b[0;32m    164\u001b[0m t0 \u001b[39m=\u001b[39m time()\n\u001b[1;32m--> 165\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49msolve_with_TFoptimizer(optim, N)\n\u001b[0;32m    166\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39mComputation time: \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m seconds\u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mformat(time()\u001b[39m-\u001b[39mt0))\n\u001b[0;32m    168\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39madd_losses_NN()\n",
       "File \u001b[1;32mc:\\Users\\achom\\Desktop\\Main\\Code\\Scientific Computing\\PINNS\\Code\\utils3d\\XPINN.py:124\u001b[0m, in \u001b[0;36mXPINN.solve_with_TFoptimizer\u001b[1;34m(self, optimizer, N)\u001b[0m\n\u001b[0;32m    122\u001b[0m pbar\u001b[39m.\u001b[39mset_description(\u001b[39m\"\u001b[39m\u001b[39mLoss: \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m \u001b[39m%\u001b[39m \u001b[39m100\u001b[39m)\n\u001b[0;32m    123\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m pbar:\n\u001b[1;32m--> 124\u001b[0m     L1,L2 \u001b[39m=\u001b[39m train_step()\n\u001b[0;32m    125\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcallback(L1,L2)\n\u001b[0;32m    127\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39miter \u001b[39m%\u001b[39m \u001b[39m10\u001b[39m \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n",
       "File \u001b[1;32mc:\\Users\\achom\\Desktop\\Main\\Code\\Scientific Computing\\PINNS\\Code\\.venv\\lib\\site-packages\\tensorflow\\python\\util\\traceback_utils.py:150\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    148\u001b[0m filtered_tb \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m    149\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m--> 150\u001b[0m   \u001b[39mreturn\u001b[39;00m fn(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[0;32m    151\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m    152\u001b[0m   filtered_tb \u001b[39m=\u001b[39m _process_traceback_frames(e\u001b[39m.\u001b[39m__traceback__)\n",
