--- a/tests/bemppx.ipynb
+++ b/tests/bemppx.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
        "(3, 1610)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -72,48 +72,13 @@
        "        -0.22323286, -0.99652132]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "grid.vertices"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_transposed = np.transpose(grid.vertices)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1.        ,  0.        ,  0.        ],\n",
-       "       [ 0.        ,  1.        ,  0.        ],\n",
-       "       [-1.        ,  0.        ,  0.        ],\n",
-       "       ...,\n",
-       "       [ 0.1547311 , -0.22197253, -0.96270327],\n",
-       "       [ 0.91767718, -0.32872529, -0.22323286],\n",
-       "       [ 0.058614  , -0.05924478, -0.99652132]])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_transposed"
    ]
   },
   {
@@ -128,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,11 +182,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_grid_points = 3\n",
+    "n_grid_points = 150\n",
     "plot_grid = np.mgrid[-1:1:n_grid_points*1j, -1:1:n_grid_points*1j]\n",
     "points = np.vstack((plot_grid[0].ravel(),\n",
     "                    plot_grid[1].ravel(),\n",
@@ -230,18 +195,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-1., -1., -1.,  0.,  0.,  0.,  1.,  1.,  1.],\n",
-       "       [-1.,  0.,  1., -1.,  0.,  1., -1.,  0.,  1.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.]])"
+       "array([[-1.        , -1.        , -1.        , ...,  1.        ,\n",
+       "         1.        ,  1.        ],\n",
+       "       [-1.        , -0.98657718, -0.97315436, ...,  0.97315436,\n",
+       "         0.98657718,  1.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "         0.        ,  0.        ]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,16 +256,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x1f2ff7162b0>"
+       "(1, 22500)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "u_evaluated.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.colorbar.Colorbar at 0x29d31dcc550>"
+      ]
+     },
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -334,16 +322,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1, 9)"
+       "(150, 150)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,208 +342,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on Grid in module bempp.api.grid.grid object:\n",
-      "\n",
-      "class Grid(builtins.object)\n",
-      " |  Grid(vertices, elements, domain_indices=None, grid_id=None, scatter=True)\n",
-      " |  \n",
-      " |  The Grid class.\n",
-      " |  \n",
-      " |  Methods defined here:\n",
-      " |  \n",
-      " |  __init__(self, vertices, elements, domain_indices=None, grid_id=None, scatter=True)\n",
-      " |      Create a grid from a vertices and an elements array.\n",
-      " |  \n",
-      " |  data(self, precision='double')\n",
-      " |      Return Numba container with all relevant grid data.\n",
-      " |  \n",
-      " |  entity_count(self, codim)\n",
-      " |      Return the number of entities of given codimension.\n",
-      " |  \n",
-      " |  entity_iterator(self, codim)\n",
-      " |      Return an iterator for a given codim.\n",
-      " |  \n",
-      " |  get_element(self, index)\n",
-      " |      Return element with a given index.\n",
-      " |  \n",
-      " |  map_to_point_cloud(self, order=None, local_points=None, precision='double')\n",
-      " |      Return a point cloud representation of the grid on quadratur points.\n",
-      " |      \n",
-      " |      Return a representation of the grid as a point cloud using points on\n",
-      " |      each element either defined through a triangle Gauss qudrature order\n",
-      " |      or by directly specifying an array of local points.\n",
-      " |      \n",
-      " |      Parameters\n",
-      " |      ----------\n",
-      " |      order : Integer\n",
-      " |          Optional parameter. Specify a quadrature order for the point\n",
-      " |          cloud generation.\n",
-      " |      local_points: Numpy array\n",
-      " |          A 2 x N array of N points in local reference coordinates that specify\n",
-      " |          the points to use for each triangle.\n",
-      " |      precision: String\n",
-      " |          Either 'single' or 'double'.\n",
-      " |      \n",
-      " |      If neither order nor local_points is specified the quadrature order is\n",
-      " |      obtained from the global parameters.\n",
-      " |      \n",
-      " |      Returns a M x 3 array of M points that represent the grid on the specified\n",
-      " |      points.\n",
-      " |  \n",
-      " |  plot(self)\n",
-      " |      Plot the grid.\n",
-      " |  \n",
-      " |  refine(self)\n",
-      " |      Return a new grid with all elements refined.\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Readonly properties defined here:\n",
-      " |  \n",
-      " |  as_array\n",
-      " |      Convert the grid to an array.\n",
-      " |      \n",
-      " |      For a grid with N elements returns a 1d array with\n",
-      " |      9 * N entries. The three nodes for element with index e\n",
-      " |      can be found in [9 * e, 9 * (e + 1)].\n",
-      " |  \n",
-      " |  barycentric_refinement\n",
-      " |      Return the barycentric refinement of this grid.\n",
-      " |  \n",
-      " |  bounding_box\n",
-      " |      Return the bounding box for the grid.\n",
-      " |      \n",
-      " |      The bounding box is a 3x2 array box such that\n",
-      " |      box[:, 0] contains (xmin, ymin, zmin) and box[:, 1]\n",
-      " |      contains (xmax, ymax, zmax).\n",
-      " |  \n",
-      " |  centroids\n",
-      " |      Return the centroids of the elements.\n",
-      " |  \n",
-      " |  device_interfaces\n",
-      " |      Return the dictionary of device interfaces for the grid.\n",
-      " |  \n",
-      " |  diameters\n",
-      " |      Return element diameters.\n",
-      " |  \n",
-      " |  domain_indices\n",
-      " |      Return domain indices.\n",
-      " |  \n",
-      " |  edge_adjacency\n",
-      " |      Edge adjacency information.\n",
-      " |      \n",
-      " |      Returns a matrix with 6 rows. Each column has the entries e0,\n",
-      " |      e1, v00, v01, v11, v12, which means that element e0 is\n",
-      " |      connected to element e1. Vertex v00 in element e0 is\n",
-      " |      identical to vertex v11 in element e1, and vertex v01 in\n",
-      " |      element 0 is identical to vertex v12 in element e1.\n",
-      " |  \n",
-      " |  edge_neighbors\n",
-      " |      Return for each edge the list of neighboring elements..\n",
-      " |  \n",
-      " |  edge_on_boundary\n",
-      " |      Return edge boundary information.\n",
-      " |  \n",
-      " |  edges\n",
-      " |      Return edges.\n",
-      " |  \n",
-      " |  element_edges\n",
-      " |      Return an array of edge indices for each element.\n",
-      " |      \n",
-      " |      element_edges[i, j] is the index of the ith edge\n",
-      " |      in the jth element.\n",
-      " |  \n",
-      " |  element_neighbors\n",
-      " |      Return named tuple (indices, indexptr).\n",
-      " |      \n",
-      " |      The neighbors of element i are given as\n",
-      " |      element_neighbors.indices[\n",
-      " |          element_neighbors.indptr[i] : element_neighbors.indptr[i +1]].\n",
-      " |      Note that the element i is contained in the list of neighbors.\n",
-      " |  \n",
-      " |  element_to_element_matrix\n",
-      " |      Return element to element matrix.\n",
-      " |      \n",
-      " |      If entry (i,j) has the value n > 0, element i\n",
-      " |      and element j are connected via n vertices.\n",
-      " |  \n",
-      " |  element_to_vertex_matrix\n",
-      " |      Return the matrix mapping vertices to elements.\n",
-      " |  \n",
-      " |  elements\n",
-      " |      Return elements.\n",
-      " |  \n",
-      " |  id\n",
-      " |      Return a unique id for the grid.\n",
-      " |  \n",
-      " |  integration_elements\n",
-      " |      Return integration elements.\n",
-      " |  \n",
-      " |  jacobian_inverse_transposed\n",
-      " |      Return the jacobian inverse transposed.\n",
-      " |  \n",
-      " |  jacobians\n",
-      " |      Return Jacobians.\n",
-      " |  \n",
-      " |  maximum_element_diameter\n",
-      " |      Return the maximum element diameter.\n",
-      " |  \n",
-      " |  minimum_element_diameter\n",
-      " |      Return the maximum element diameter.\n",
-      " |  \n",
-      " |  normals\n",
-      " |      Return normals.\n",
-      " |  \n",
-      " |  number_of_edges\n",
-      " |      Return number of edges.\n",
-      " |  \n",
-      " |  number_of_elements\n",
-      " |      Return number of elements.\n",
-      " |  \n",
-      " |  number_of_vertices\n",
-      " |      Return number of vertices.\n",
-      " |  \n",
-      " |  vertex_adjacency\n",
-      " |      Vertex adjacency information.\n",
-      " |      \n",
-      " |      Returns a matrix with 4 rows. Each column has the entries e0,\n",
-      " |      e1, ind0, ind1, which means that element e0 is connected to\n",
-      " |      element e1 via local vertex index ind0 in e0 and ind1 in e1.\n",
-      " |      Only returnes connectivity via a single vertex. For\n",
-      " |      connectivity via edges see edge_adjacency.\n",
-      " |  \n",
-      " |  vertex_neighbors\n",
-      " |      Return for each vertex the list of neighboring elements.\n",
-      " |  \n",
-      " |  vertex_on_boundary\n",
-      " |      Return vertex boundary information.\n",
-      " |  \n",
-      " |  vertices\n",
-      " |      Return vertices.\n",
-      " |  \n",
-      " |  volumes\n",
-      " |      Return element volumes.\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data descriptors defined here:\n",
-      " |  \n",
-      " |  __dict__\n",
-      " |      dictionary for instance variables (if defined)\n",
-      " |  \n",
-      " |  __weakref__\n",
-      " |      list of weak references to the object (if defined)\n",
-      "\n"
+      "[[       nan 0.34744121        nan]\n",
+      " [0.028163   0.07966082 0.02813451]\n",
+      " [       nan 0.019912          nan]]\n"
      ]
     }
    ],
    "source": [
-    "help(grid)"
+    "print(u_evaluated)"
    ]
   },
   {
@@ -576,6 +377,120 @@
    ],
    "source": [
     "grid.get_element(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on BoundaryOperatorWithAssembler in module bempp.api.assembly.boundary_operator object:\n",
+      "\n",
+      "class BoundaryOperatorWithAssembler(BoundaryOperator)\n",
+      " |  BoundaryOperatorWithAssembler(domain, range_, dual_to_range, assembler, operator_descriptor, transpose=False)\n",
+      " |  \n",
+      " |  Implements a boundary operator together with an assembler.\n",
+      " |  \n",
+      " |  Method resolution order:\n",
+      " |      BoundaryOperatorWithAssembler\n",
+      " |      BoundaryOperator\n",
+      " |      builtins.object\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __init__(self, domain, range_, dual_to_range, assembler, operator_descriptor, transpose=False)\n",
+      " |      Initialize a boundary operator with assembler.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Readonly properties defined here:\n",
+      " |  \n",
+      " |  assembler\n",
+      " |      Return the assembler associated with this operator.\n",
+      " |  \n",
+      " |  descriptor\n",
+      " |      Operator descriptor.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Methods inherited from BoundaryOperator:\n",
+      " |  \n",
+      " |  __add__(self, other)\n",
+      " |      Return sum of two boundary operators.\n",
+      " |  \n",
+      " |  __matmul__(self, other)\n",
+      " |      Multiply by another operator.\n",
+      " |  \n",
+      " |  __mul__(self, other)\n",
+      " |      Return product with a scalar, grid function or other operator.\n",
+      " |  \n",
+      " |  __neg__(self)\n",
+      " |      Negate an operator.\n",
+      " |  \n",
+      " |  __rmul__(self, other)\n",
+      " |      Multiply by another operator.\n",
+      " |  \n",
+      " |  __sub__(self, other)\n",
+      " |      Subtract two operators.\n",
+      " |  \n",
+      " |  strong_form(self)\n",
+      " |      Return a discrete operator that maps into the range space.\n",
+      " |  \n",
+      " |  weak_form(self)\n",
+      " |      Return the weak form (assemble if necessary).\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Readonly properties inherited from BoundaryOperator:\n",
+      " |  \n",
+      " |  domain\n",
+      " |      Return the domain space of the operator.\n",
+      " |  \n",
+      " |  dual_to_range\n",
+      " |      Return the dual to range space of the operator.\n",
+      " |  \n",
+      " |  parameters\n",
+      " |      Return the parameters associated with the operator.\n",
+      " |  \n",
+      " |  range\n",
+      " |      Return the range space of the operator.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors inherited from BoundaryOperator:\n",
+      " |  \n",
+      " |  __dict__\n",
+      " |      dictionary for instance variables (if defined)\n",
+      " |  \n",
+      " |  __weakref__\n",
+      " |      list of weak references to the object (if defined)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(dlp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.04189739, 0.059163  , 0.85988485, ..., 0.05506992, 0.0427759 ,\n",
+       "       0.0575023 ])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dirichlet_fun.coefficients"
    ]
   },
   {
